# Trace-Dev

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: dataset.yaml  protocol.yaml  stage_g45_strength.yaml  test_synthetic.yaml  thresholds.yaml  train_l40.yaml
datasets/manifests/: 004_fbp_volumes.json
datasets/splits/: fbp_splits.json
references/: guidi.md  trace_ct_updated_full_architecture_protocol.tex
scripts/: generate_manifest_and_splits.py  infer_50_slices.py  setup_env.sh
tests/: test_closed_loop_metrics_gating.py  test_forbidden_transitions.py  test_g1_masked_baseline.py  test_g2_context_no_highfreq_leakage.py  test_g3_residual_audit_negative_control.py  test_g45_denoising_strength.py  test_g4_g8_gating.py  test_level_0.py  test_level_1.py
trace_ct/audit/: context_audit.py  denoising_strength_audit.py  logger.py  proposal_audit.py  residual_audit.py  schemas.py
trace_ct/cli/: audit_data.py  audit_g45_strength.py  clean_runs.py  main.py  real_data_smoke.py  real_late_smoke.py  real_residual_smoke.py  train.py  validate_protocol.py
trace_ct/config/: defaults.py  schema.py
trace_ct/data/: alignment.py  dataset.py  masking.py  normalization.py  phantom.py  splits.py  zarr_io.py
trace_ct/models/: context.py  denoiser.py  denoising_strength.py  dynamic_target.py  proposal.py
trace_ct/training/: residual.py  stages.py  state_machine.py
trace_ct/utils/: hashing.py  paths.py
