[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trace_ct"
version = "0.1.0"
description = "Traceable Residual-Audited Conditional Estimation for Self-Supervised CT Denoising"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch==2.1.2",
    "torchvision==0.16.2",
    "numpy==1.26.4",
    "zarr==2.16.1",
    "ome-zarr==0.8.3",
    "pydantic==2.6.4",
    "scipy>=1.11.0",
    "scikit-image>=0.22.0",
    "dask>=2024.2.0",
    "tifffile>=2024.2.12",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.1",
    "matplotlib>=3.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0"
]

[tool.setuptools.packages.find]
include = ["trace_ct*"]
